<resources>
    <string name="app_name">OSTrino</string>
    <string name="API_KEY">"AIzaSyDSMKvbGUJxKhPz5t4PMFEByD5qFy1sjEA"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="label_title">Title</string>
    <string name="label_show">Show</string>
    <string name="label_tags">Tags</string>
    <string name="label_link">Link</string>
    <string name="label_add">Add New OST</string>
    <string name="label_shuffle_play">Shuffle Play</string>
    <string name="label_share">Share</string>
    <string name="label_shuffle">Shuffle</string>
    <string name="label_delete_all">Delete All Osts</string>
    <string name="label_clean_tags">Clean Tags and Show Table</string>
    <string name="label_ost_of_the_day">Ost of the day</string>
    <string name="label_about">About</string>
    <string name="text_picasso"><b>Picasso</b>\n
                    "  Copyright 2013 Square, Inc." \n
                    "  License: Apache 2.0" \n
                    " " Website: <a href="http://square.github.io/picasso/">http://square.github.io/picasso/</a></string>
    <string name="text_okhttp"><b>OkHttp</b>\n
                    "  Copyright 2016 Square, Inc." \n
                    "  License: Apache 2.0" \n
                    " " Website: <a href="http://square.github.io/okhttp/">http://square.github.io/okhttp/</a></string>
    <string name="text_material_icons"><b>Material Icons</b>\n
                    "  License: Apache 2.0" \n
                    " " Website: <a href="https://material.io/icons/">https://material.io/icons/</a></string>
    <string name="text_about_app"> <b>OSTrino</b> \n
                                    © 2017 Odd Harald Sjursen Sande \n
                                    This app uses the following open source libraries:</string>
    <string name="label_filter">Filter</string>
    <string name="label_search">Search</string>
    <string name="label_empty_list_import">"Empty List :C, start adding some Osts or click this text to load Osts from assets"</string>
    <string name="label_youtube_controls">Youtube controls</string>

    <string name="btn_text_view_controls_on">Ctrls on</string>
    <string name="btn_text_view_controls_off">Ctrls off</string>
    <string name="tv_expand_player">Expand Player</string>
    <string name="tv_minimize_player">Minimize Player</string>

    <string name="menu_import">Import OSTs</string>
    <string name="menu_export">Exports OSTs</string>
    <string name="menu_hideSearchBar">Hide SearchBar</string>

    <string name="nav_bar_library"> Library </string>
    <string name="nav_bar_search"> Search </string>
    <string name="nav_bar_playlists"> Playlists? </string>

    <!-- App name -->
    <string name="app_version_number">1.0</string>
    <string name="menu_settings">Settings</string>

    <string name="cd_sort">Sort button</string>
    <string name="cd_divider">Divider view</string>
    <string name="cd_thumbnail">Thumbnail</string>
    <string name="cd_collapse">Close Player</string>
    <string name="cd_repeat">Repeat one or all</string>
    <string name="cd_previous">Skip backwards</string>
    <string name="cd_play">Play and pause</string>
    <string name="cd_next">Skip forwards</string>
    <string name="cd_options">Options</string>

    <!-- Options on resulting video in search -->
    <string name="chooser_add_to_queue">Add to Queue</string>
    <string name="chooser_add_to_library">Add to Library</string>
    <string name="chooser_copy_link">Copy Link</string>
    <string name="create_new_playlist">Create new Playlist</string>
    <string name="playlist_name">Playlist Name</string>
    <string name="chooser_add_to_playlist">Add to Playlist</string>
    <string name="choose_delete_playlist">Delete</string>
    <string name="playlist_icon">playlist icon</string>
    <string name="label_clear_tn_storage">Clear thumbnail files</string>
    <string name="fastscroller_handle">fastscroll handle</string>
    <string name="fastscroller_track">fastscroll track</string>
</resources>
