<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.odd.ostrinov2.dialogFragments.AddOstDialog">

    <TextView
        android:id="@+id/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_title" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/edtTitle" />

    <TextView
        android:id="@+id/Show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_show" />

    <AutoCompleteTextView
        android:id="@+id/actvShow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/tvTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_tags" />

    <MultiAutoCompleteTextView
        android:id="@+id/mactvTags"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:completionThreshold="1"/>

    <TextView
        android:id="@+id/tvLink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_link" />

    <EditText
        android:inputType="textUri"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:id="@+id/edtUrl" />

</LinearLayout>