<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/notificationbg" android:layout_width="match_parent"
    android:layout_height="120dip"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/status_bar_album_art"
        android:layout_width="@dimen/notification_expanded_height"
        android:layout_height="@dimen/notification_expanded_height"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/cd_thumbnail"
        android:scaleType="centerCrop" />

    <LinearLayout
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:id="@+id/buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:divider="?android:listDivider"
        android:layout_toRightOf="@id/status_bar_album_art"
        android:layout_toEndOf="@+id/status_bar_album_art"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:showDividers="middle"
        android:dividerPadding="12.0dip">

        <ImageButton
            android:id="@+id/status_bar_prev"
            android:layout_width="0.0dip"
            android:layout_height="@dimen/play_controls_notification"
            android:layout_weight="1.0"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/cd_previous"
            android:padding="10.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_previous_black_24dp" />

        <ImageButton
            android:id="@+id/status_bar_play"
            android:layout_width="0.0dip"
            android:layout_height="@dimen/play_controls_notification"
            android:layout_weight="1.0"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/cd_play"
            android:padding="10.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_play_arrow_black_24dp" />

        <ImageButton
            android:id="@+id/status_bar_next"
            android:layout_width="0.0dip"
            android:layout_height="@dimen/play_controls_notification"
            android:layout_weight="1.0"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/cd_next"
            android:padding="10.0dip"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_skip_next_black_24dp" />
    </LinearLayout>
    <ImageView
        android:background="?android:dividerHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="1.0px"
        android:layout_toRightOf="@id/status_bar_album_art"
        android:layout_toEndOf="@id/status_bar_album_art"
        android:layout_above="@+id/buttons"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/cd_divider"
        android:id="@+id/imageView" />

    <ImageButton
        android:id="@id/status_bar_collapse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="?android:selectableItemBackground"
        android:contentDescription="@string/cd_collapse"
        android:padding="8.0dip"
        android:scaleType="fitCenter"
        android:src="@drawable/apollo_holo_dark_notifiation_bar_collapse" />
    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:id="@+id/textarea"
        android:paddingLeft="@dimen/notification_padding"
        android:paddingTop="8.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/status_bar_collapse"
        android:layout_toStartOf="@id/status_bar_collapse"
        android:layout_toRightOf="@id/status_bar_album_art"
        android:layout_toEndOf="@id/status_bar_album_art"
        android:layout_alignParentTop="true">
        <TextView
            android:ellipsize="marquee"
            android:layout_gravity="start"
            android:id="@+id/status_bar_track_name"
            android:focusable="true"
            android:fadingEdge="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

        <TextView
            android:id="@+id/status_bar_artist_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:ellipsize="marquee"
            android:fadingEdge="horizontal"
            android:maxLines="1" />

        <TextView
            android:ellipsize="marquee"
            android:layout_gravity="start"
            android:id="@+id/status_bar_album_name"
            android:fadingEdge="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            />
    </LinearLayout>

    <ImageButton
        android:id="@+id/status_bar_maximize"
        android:contentDescription="@string/tv_expand_player"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/widget_margin"
        android:layout_above="@+id/buttons"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/status_bar_collapse"
        android:layout_toEndOf="@+id/textarea"
        android:layout_toRightOf="@+id/textarea"
        android:background="@color/black" />

</RelativeLayout>