<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_listScreen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:orientation="vertical">

    <TableLayout
        android:id="@+id/tlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="0, 1, 2"
        android:background="@drawable/side_nav_bar">

        <TableRow
            android:id="@+id/trTop"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <EditText
                android:id="@+id/edtFilter"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:ems="11"
                android:hint="@string/label_filter"
                android:inputType="textPersonName"
                android:textColor="#f100"
                android:textCursorDrawable="@color/black" />

            <ImageButton
                android:id="@+id/btnSort"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:contentDescription="@string/cd_sort"
                app:srcCompat="@drawable/ic_sort_black_24dp" />

            <ImageButton
                android:id="@+id/btnShufflePlay"
                style="@style/Base.Widget.AppCompat.Button.Borderless"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:contentDescription="@string/label_shuffle_play"
                app:srcCompat="@drawable/shuffle_play" />

            <ImageButton
                android:id="@+id/btnAdd"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:contentDescription="@string/label_add"
                app:srcCompat="@drawable/ic_library_add_black_24dp" />
        </TableRow>

    </TableLayout>

    <android.support.v7.widget.RecyclerView
        app:fastScrollVerticalTrackDrawable="@drawable/line_drawable"
        android:id="@+id/rvOstList"
        style="@style/Widget.AppCompat.ListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tlTop"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:fastScrollEnabled="true"
        app:fastScrollHorizontalThumbDrawable="@drawable/scrollbar"
        app:fastScrollHorizontalTrackDrawable="@drawable/line_drawable"
        app:fastScrollVerticalThumbDrawable="@drawable/scrollbar"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
</RelativeLayout>